Fixed squished About photo. Took out 'Product Management' highlight in main top banner. Copied updated resume paragraphs to site.

--- a/gitbizzy/public/css/layout.css
+++ b/gitbizzy/public/css/layout.css
@@ -72,9 +72,9 @@ header .banner-text h3 {
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
 }
 header .banner-text h3 span,
-header .banner-text h3 a {
+/* header .banner-text h3 a {
    color: #47c7fa;
-}
+} */
 header .banner-text hr {
    width: 60%;
    margin: 18px auto 24px auto;
@@ -210,6 +210,7 @@ ul#nav li.current a { color: #47c7fa; }
    width: 120px;
    height: 120px;
    border-radius: 100%;
+   object-fit: cover;
 }
 #about .contact-details { width: 41.66667%; }
 #about .download {
